2008-01-02  Lapo Calamandrei <calamandrei@gmail.com>

	* Yet another new year.
	* {32x32,scalable}/emotes/face-worried.* : added.

2007-12-31  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,32x32,scalable}/emotes/face-tired.* : added.

2007-12-30  Lapo Calamandrei <calamandrei@gmail.com>

	* 22x22/emotes/face-tired.* : added.
	* {16x16,22x22}/emotes/face-worried.* : added.
	* */emotes/face-sick.* : added.
	* {32x32,scalable}/emotes/face-devil.* : tweaks.
	* 32x32/emotes/face-uncertain.* : added.

2007-12-21  Lapo Calamandrei <calamandrei@gmail.com>

	* {32x32,scalable}/emotes/face-angry.* : new icons.
	* {32x32,scalable}/emotes/face-crying.* : tweaks.

2007-12-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.4 for release

2007-11-26  Lapo Calamandrei <calamandrei@gmail.com>

	* 16x16/emotes/* : tweaks.
	* 16x16/emotes/face-{angry,uncertain}.* : new icons.

2007-11-23  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.0 for release

2007-11-23  Lapo Calamandrei <calamandrei@gmail.com>

	* {32x32,scalable}/emotes/face-smile-big.* : tweaks, tweaks, tweaks.
	* 22x22/emotes/* : tweaks.
	* 22x22/emotes/face-angry.* : new (lousy) icons.
	* 22x22/emotes/face-uncertain.* : new (lousy) icons.

2007-11-22  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/emotes/face-smile-big.* : yet more tweaks.

2007-11-21  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/status/mail-signed* : just to fill the blanks, not the
		best icons ever seen...

2007-11-20  Lapo Calamandrei <calamandrei@gmail.com>

	* {22x22,32,scalble}/emotes/face-smile-big.* : tweaks.

2007-11-19  Lapo Calamandrei <calamandrei@gmail.com>

	* New ugly face-smile-big, waiting to be fixed by Jakub.
	* 22x22/categories/system-help : tweaks.
	* renamed face-smile-big to face-laugh.

2007-11-11  Rodney Dawes  <dobey.pwns@gmail.com>

	* scalable/emotes/face-uncertain.svg:
	Add a scalable face-uncertain icon as it's now in the spec
