@@ -1,3 +1,8 @@
+2008-01-04  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* Changed */actions/zoom-best-fit.* to */actions/zoom-fit-best.*
+		as in the latest naming spec revision.
+
 2008-01-02  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* Yet another new year.
